syntax = "proto3";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc ListSayHello (HelloRequest) returns (stream HelloReply) {}
    rpc SayHellos (stream HelloRequest) returns (HelloReply) {}
}

message HelloRequest{
    string name = 1;
}

message HelloReply {
    string message = 1;
}
